<resources>
    <string name="app_name">إمرأة فاضلة </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">المبدأ الأول</string>
    <string name="tab_text_2">المبدأ الثاني</string>
    <string name="tab_text_3">المبدأ الثالث</string>
    <string name="tab_text_4">المبدأ الرابع</string>
    <string name="tab_text_5">الصلاة</string>
    <string name="tab_text_6">المرأة في عهد المسيح</string>
    <string name="tab_text_7">راسلينا</string>

    <string name="womanchrris1">نظر المجتمع، في أيام يسوع المسيح على الأرض، نظره دونية للمرأة، ولكن يسوع نفسه رفع من شأنها. فقد كانت النساء من أتباعه وخدمنه حتى من أموالهن. وقد تعامل الرب يسوع معهن كما كان يتعامل مع الرجال دون تفرقة. فقد إهتم يسوع:</string>
    <string name="womanchrris2">المرأة التي امسكت بذات الفعل</string>
    <string name="womanchrris3">بحسـب الناموس، كان يجب أن يرجم الرجل والمرأة في حالة ضبطهما يزنيان، ولكن يسوع المسيح بسؤاله للكتبة والفريسيين أي رجال الدين، قد أظهر أن ليس إنسان بلا خطية امام الله ولا يحق لأي خاطـىء رجمهـا. في ذلك الوقت، عامل رجال الدين المرأه كمخلوق أدنى من الرجل، حيث لم يدينوا الذي أخطأ أيضاً معها. لكن يسوع نظر للمرأة نظرة محبة، رحمة وغفران وأعاد لها كرامتها من خلال قوله «ولا أنا أدينك، أذهبي ولا تخطئي». (يوحنا ٨ : ٢-١١) </string>
    <string name="womanchrris4">بالمرضى</string>
    <string name="womanchrris5">كنازفة الدم التي شفاها لمجرد لمسها هدب ثوبه، ودعاها بإبنة قائلا لها ، « ثقي يا إبنة إيمانك قد شفاك ، إذهبي بسلام » ( لوقا ٨ : ٤٥-٤٨) بالرغم من أنها كانت تعتبر نجسة بسبب مرضها، لذا قام يسوع وأعلن شفاءها أمام الجميع. </string>
    <string name="womanchrris6">بالخطاة</string>
    <string name="womanchrris7">منهن مريم المجدليه قبل أن تكون إحدى أتباعه، حيث حررها يسوع من تسلط إبليس عليها بأرواح نجسة قد قيدتها، وكان لها فيما بعد الامتياز لتكون أول شاهدة لقيامة يسوع من بين الاموات، بالرغم من أن شهادة المرأة لم تكن تعتبر اَنذاك. (لوقــا ٨ : ١-٣)، (يوحنا ١١ : ٢٠-١٨).</string>
    <string name="womanchrris8">المرأة السامرية</string>
    <string name="womanchrris9">رغم كونها إمراة ومن مذهب آخر، إلا أن يسوع المسيح بادر بالحديث معها وجعلها تكتشف حقيقته بأنه هو المسيح المنتظر، رغم العداوة التي كانت بـين اليهود والسامريين آنذاك. (يوحنا ٤ : ٣-٣٠). </string>
    <string name="womanchriss10">فقد تحنن على أرملة مات إبنها الوحيد، فأقامه من الموت ودفعه الى أمه. (لوقا ٧ : ١١-١٧).</string>
    <string name="womanchris11">بالأرامل</string>
    <string name="womanchris12">حيث قدّر الفلسين اللذين قدمتهما الأرملة الفقيرة واعتبرها أكثر المقدمين وكان ما قدمته كنزاً في عينيه، «فجعل يسوع من هذہ المرأة قدوة للجميع وتولى الدفاع عنها، لأن الأرامل لم يكن لهن من يدافع عنهن» (مرقس ١٢ : ٤١-٤٤).</string>
    <string name="womanchris13">بأمه القديسة مريم العذراء</string>
    <string name="womanchris14">حيث أوصى يوحنا الحبيب بأمه حين كان على الصليب قائلاً للتلميذ «هوذا أمك» (يوحنا ١٩ : ٢٧).</string>
    <string name="womanchris15">بالضعفاء</string>
    <string name="womanchriss16">اذ إهتم بالإمــرأة المنحنية التي كان بها روح ضعف وكانت منحنية لمدة ثماني عشرة سنة، وقد شفاها يسوع المسيح يوم السبت ناعتاً إياها «إبنة إبراهيم» (لوقا ١٣ ١٠-١٧). لم يطلق هذا اللقب في التوراة إلا على الرجال كأبناء لإبراهيم.</string>
    <string name="womanchris17">بالإضافة لكل ما ذكر، فقد إستخدم يسوع المسيح حياة المرأه في أمثاله ليوضح مفاهيم وتعاليم هامة، مثل قصة الدرهم المفقــود (لوقا ٨ : ١٤-١٠) والعذارى الحكيمات والجاهلات (متى ٢٥ : ١-٣) وغيرهم من أمثال. لا نجد في تعليم يسوع كله أو في تعاملاته أي شيء يعكس التفرقة القائمة في عصره بين الرجل والمرأة، بل ان أقواله وأعماله أظهرت دائماً الاحترام والتكريم المستحق للمرأة كالرجل، فالمرأة كالرجل مخلوقة على صورة الله ومستحقة الكرامة ذاتها. </string>
    <string name="aboutApp"> يسعدنا أن نقدم لكِ تطبيق إمرأة فاضلة ، يعرض التطبيق مكانة المرأة من وجهة نظر مسيحية وقيمتها الحقيقية عند الله ، وكيف أن الرب يسوع المسيح رفع من شأن المرأة بينما المجتمع كان ينظر اليها نظرة دونية .</string>
    <string name="aboutApp1">يعرض التطبيق مبادئ روحية تعزز وتبني علاقتك بالله , ويحتوي التطبيق أيضًا على خواطر كتابية تشجيعية وبنائية أساسها الكتاب المقدس.</string>
    <string name="aboutApp2">يتضمن التطبيق أيضًا تواريخ لمناسبات سنوية هامة مع شرح بسيط ، ولأننا نهتم بكِ ستجدين بالتطبيق نصائح عامة لكل ما يخص صحتك, جمالك وأناقتك.</string>
    <string name="aboutApp3">كما وستجدين في التطبيق أيضًا أفلام فيديو قصيرة ، ايضًا البومات صور متعددة مع تصميم مميز يمكنك مشاركتها مع أصدقائك واستخدامها كصورة خلفيه لجهازك النقال ، يمنحك التطبيق فرصة التواصل معنا هاتفيًا ، أو عبر السكايب ، الفيسبوك ، تويتر والبريد الألكتروني ، وأيضًا يمكنك مشاركة التطبيق وكل محتواه مع أصدقائك من خلال الفيسبوك , تويتر, والبريد الألكتروني والرسائل .</string>
    <string name="title_activity_about_app_1">aboutApp_1</string>

</resources>
