<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    tools:openDrawer="right">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff"
        >
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay"
            >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="#8c0032"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name"
                android:layout_gravity="right"
                android:textAlignment="center"
                >

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.woman.orcas.myapplication.Woman_christ"

    android:layoutDirection="rtl"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView

            android:textColor="#8c0032"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="rtl"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:text="@string/womanchrris1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30dp"
            android:text="@string/womanchrris2"
            android:textDirection="rtl"
            android:textStyle="bold"
            />


    <TextView
        android:textColor="#8c0032"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textDirection="rtl"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:text="@string/womanchrris3"
        />

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/m6"

        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/womanchrris4"
            android:textDirection="rtl"
            android:textStyle="bold"
            />

        <TextView
            android:textColor="#8c0032"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="rtl"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="@string/womanchrris5"
            />
        <ImageView

            android:layout_width="250dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:background="@drawable/silde2"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30dp"
            android:text="@string/womanchrris6"
            android:textDirection="rtl"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:textColor="#8c0032"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="rtl"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="@string/womanchrris7"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30dp"
            android:text="@string/womanchrris8"
            android:textDirection="rtl"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:textColor="#8c0032"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="rtl"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="@string/womanchrris9"
            />

        <ImageView

            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/womanchris1"

            />

        <TextView
            android:textColor="#8c0032"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="rtl"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="@string/womanchriss10"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30dp"
            android:text="@string/womanchris11"
            android:textDirection="rtl"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:textColor="#8c0032"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="rtl"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="@string/womanchris12"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30dp"
            android:text="@string/womanchris13"
            android:textDirection="rtl"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:textColor="#8c0032"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="rtl"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="@string/womanchris14"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30dp"
            android:text="@string/womanchris15"
            android:textDirection="rtl"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:textColor="#8c0032"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="rtl"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="@string/womanchriss16"
            />
        <TextView
            android:textColor="#8c0032"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="rtl"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="@string/womanchris17"
            />

        <ImageView

            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/womanchris2"
            android:layout_marginBottom="40dp"
            />




    </LinearLayout>


</ScrollView>
    </LinearLayout>



    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="#fffffa"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"
        app:itemIconTint="#6c6c79"

        />

</android.support.v4.widget.DrawerLayout>