<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    tools:openDrawer="right">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/aboutApp"
                android:textColor="@color/secondaryTextColor"
                android:layout_margin="20dp"

                android:textSize="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/aboutApp1"
                android:textColor="@color/secondaryTextColor"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/aboutApp2"
                android:textColor="@color/secondaryTextColor"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/aboutApp3"
                android:textColor="@color/secondaryTextColor"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20dp"
                />
        </LinearLayout>

    </ScrollView>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="#fffffa"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />



</android.support.v4.widget.DrawerLayout>
